include/background.h


struct background
{
  double H0; 
  double Omega0_g; 
  double T_cmb; 
  double Omega0_b; 
  double Omega0_cdm; 
  double Omega0_lambda; 
  double Omega0_fld; 
  double w0_fld; 
  double wa_fld; 
  short w_fld_parametrization; 
  double cs2_fld; 
  short use_ppf; 
  double c_gamma_over_c_fld; 
  double Omega0_ur; 
  double Omega0_dcdmdr; 
  double Gamma_dcdm; 
  double Omega_ini_dcdm;    
  double Omega0_scf;        
  short attractor_ic_scf;   
  double phi_ini_scf;       
  double phi_prime_ini_scf; 
  double * scf_parameters;  
  int scf_parameters_size;  
  int scf_tuning_index;     
  double Omega0_k; 
  int N_ncdm;                            
  double * M_ncdm;                       
  double * Omega0_ncdm, Omega0_ncdm_tot; 
  double * deg_ncdm, deg_ncdm_default;   
  double * T_ncdm,T_ncdm_default;       
  double * ksi_ncdm, ksi_ncdm_default;  
  double * ncdm_psd_parameters;         
  int * got_files;                      
  char * ncdm_psd_files;                
  double h; 
  double age; 
  double conformal_age; 
  double K; 
  int sgnK; 
  double * m_ncdm_in_eV; 
  double Neff; 
  double Omega0_dcdm; 
  double Omega0_dr; 
  double a_today; 
  int index_bg_a;             
  int index_bg_H;             
  int index_bg_H_prime;       
  int index_bg_rho_g;         
  int index_bg_rho_b;         
  int index_bg_rho_cdm;       
  int index_bg_rho_lambda;    
  int index_bg_rho_fld;       
  int index_bg_w_fld;         
  int index_bg_rho_ur;        
  int index_bg_rho_dcdm;      
  int index_bg_rho_dr;        
  int index_bg_phi_scf;       
  int index_bg_phi_prime_scf; 
  int index_bg_V_scf;         
  int index_bg_dV_scf;        
  int index_bg_ddV_scf;       
  int index_bg_rho_scf;       
  int index_bg_p_scf;         
  int index_bg_rho_ncdm1;     
  int index_bg_p_ncdm1;       
  int index_bg_pseudo_p_ncdm1;
  int index_bg_Omega_r;       
  int index_bg_rho_crit;      
  int index_bg_Omega_m;       
  int index_bg_conf_distance; 
  int index_bg_ang_distance;  
  int index_bg_lum_distance;  
  int index_bg_time;          
  int index_bg_rs;            
  int index_bg_D;             
  int index_bg_f;             
  int bg_size_short;  
  int bg_size_normal; 
  int bg_size;        
  int bt_size;               
  double * tau_table;        
  double * z_table;          
  double * background_table; 
  double * d2tau_dz2_table; 
  double * d2background_dtau2_table; 
  int index_bi_a;       
  int index_bi_rho_dcdm;
  int index_bi_rho_dr;  
  int index_bi_rho_fld; 
  int index_bi_phi_scf;       
  int index_bi_phi_prime_scf; 
  int index_bi_time;    
  int index_bi_rs;      
  int index_bi_tau;     
  int index_bi_D;       
  int index_bi_D_prime; 
  int bi_B_size;        
  int bi_size;          
  short has_cdm;       
  short has_dcdm;      
  short has_dr;        
  short has_scf;       
  short has_ncdm;      
  short has_lambda;    
  short has_fld;       
  short has_ur;        
  short has_curvature; 
  int * ncdm_quadrature_strategy; 
  int * ncdm_input_q_size; 
  double * ncdm_qmax;   
  double ** q_ncdm_bg;  
  double ** w_ncdm_bg;  
  double ** q_ncdm;     
  double ** w_ncdm;     
  double ** dlnf0_dlnq_ncdm; 
  int * q_size_ncdm_bg; 
  int * q_size_ncdm;    
  double * factor_ncdm; 
  short short_info;  
  short normal_info; 
  short long_info;   
  short inter_normal;  
  short inter_closeby; 
  short shooting_failed;  
  ErrorMsg shooting_error; 
  short background_verbose; 
  ErrorMsg error_message; 
};
  int background_at_tau(
			struct background *pba,
			double tau,
			short return_format,
			short inter_mode,
			int * last_index,
			double * pvecback
			);
  int background_tau_of_z(
                          struct background *pba,
                          double z,
                          double * tau
                          );
  int background_init(
		      struct precision *ppr,
		      struct background *pba
		      );
  int background_free(
		      struct background *pba
		      );
  int background_output_titles(struct background * pba,
                               char titles[_MAXTITLESTRINGLENGTH_]
                               );
  int background_output_data(
                           struct background *pba,
                           int number_of_titles,
                           double *data);