include/spectra.h


struct spectra {
  double z_max_pk;  
  int non_diag; 
  int md_size;           
  int index_md_scalars; 
  int * ic_size;         
  int * ic_ic_size;      
  short ** is_non_zero; 
  int has_tt; 
  int has_ee; 
  int has_te; 
  int has_bb; 
  int has_pp; 
  int has_tp; 
  int has_ep; 
  int has_dd; 
  int has_td; 
  int has_pd; 
  int has_ll; 
  int has_tl; 
  int has_dl; 
  int index_ct_tt; 
  int index_ct_ee; 
  int index_ct_te; 
  int index_ct_bb; 
  int index_ct_pp; 
  int index_ct_tp; 
  int index_ct_ep; 
  int index_ct_dd; 
  int index_ct_td; 
  int index_ct_pd; 
  int index_ct_ll; 
  int index_ct_tl; 
  int index_ct_dl; 
  int d_size;      
  int ct_size; 
  int * l_size;   
  int l_size_max; 
  double * l;    
  int ** l_max_ct;    
  int * l_max;    
  int l_max_tot; 
  double ** cl;   
  double ** ddcl; 
  double alpha_II_2_20;	
  double alpha_RI_2_20;	
  double alpha_RR_2_20;	
  double alpha_II_21_200; 
  double alpha_RI_21_200; 
  double alpha_RR_21_200; 
  double alpha_II_201_2500; 
  double alpha_RI_201_2500; 
  double alpha_RR_201_2500; 
  double alpha_II_2_2500; 
  double alpha_RI_2_2500; 
  double alpha_RR_2_2500; 
  double alpha_kp; 
  double alpha_k1; 
  double alpha_k2; 
  int ln_k_size;    
  double * ln_k;    
  int ln_tau_size;  
  double * ln_tau;  
  double * ln_pk;   
  double * ddln_pk; 
  double sigma8;    
  double sigma8_cb; 
  double * ln_pk_l;   
  double * ddln_pk_l; 
  int ln_tau_nl_size;  
  double * ln_tau_nl;  
  double * ln_pk_nl;   
  double * ddln_pk_nl; 
  double * ln_pk_cb;           
  double * ddln_pk_cb;         
  double * ln_pk_cb_l;         
  double * ddln_pk_cb_l;       
  double * ln_pk_cb_nl;        
  double * ddln_pk_cb_nl;      
  int index_tr_delta_g;        
  int index_tr_delta_b;        
  int index_tr_delta_cdm;      
  int index_tr_delta_dcdm;     
  int index_tr_delta_scf;      
  int index_tr_delta_fld;      
  int index_tr_delta_ur;       
  int index_tr_delta_dr;       
  int index_tr_delta_ncdm1;    
  int index_tr_delta_tot;      
  int index_tr_theta_g;        
  int index_tr_theta_b;        
  int index_tr_theta_cdm;      
  int index_tr_theta_dcdm;     
  int index_tr_theta_scf;      
  int index_tr_theta_fld;      
  int index_tr_theta_ur;       
  int index_tr_theta_dr;       
  int index_tr_theta_ncdm1;    
  int index_tr_theta_tot;      
  int index_tr_phi;            
  int index_tr_psi;            
  int index_tr_phi_prime;      
  int index_tr_h;              
  int index_tr_h_prime;        
  int index_tr_eta;            
  int index_tr_eta_prime;      
  int tr_size;                 
  double * matter_transfer;   
  double * ddmatter_transfer; 
  short spectra_verbose; 
  ErrorMsg error_message; 
};
  int spectra_cl_at_l(
                      struct spectra * psp,
                      double l,
                      double * cl,
                      double ** cl_md,
                      double ** cl_md_ic
                      );
  int spectra_pk_at_z(
                      struct background * pba,
                      struct spectra * psp,
                      enum linear_or_logarithmic mode,
                      double z,
                      double * output_tot,
                      double * output_ic,
                      double * output_cb_tot,
                      double * output_cb_ic
                      );
  int spectra_pk_at_k_and_z(
                            struct background * pba,
                            struct primordial * ppm,
                            struct spectra * psp,
                            double k,
                            double z,
                            double * pk,
                            double * pk_ic,
                            double * pk_cb,
                            double * pk_cb_ic
                            );
  int spectra_pk_nl_at_z(
                         struct background * pba,
                         struct spectra * psp,
                         enum linear_or_logarithmic mode,
                         double z,
                         double * output_tot,
                         double * output_cb_tot
                         );
  int spectra_pk_nl_at_k_and_z(
                               struct background * pba,
                               struct primordial * ppm,
                               struct spectra * psp,
                               double k,
                               double z,
                               double * pk_tot,
                               double * pk_cb_tot
                               );
  int spectra_init(
                   struct precision * ppr,
                   struct background * pba,
                   struct perturbs * ppt,
                   struct primordial * ppm,
                   struct nonlinear *pnl,
                   struct transfers * ptr,
                   struct spectra * psp
                   );
  int spectra_free(
                   struct spectra * psp
                   );
  int spectra_sigma(
                    struct background * pba,
                    struct primordial * ppm,
                    struct spectra * psp,
                    double R,
                    double z,
                    double *sigma
                    );
  int spectra_sigma_cb(
                    struct background * pba,
                    struct primordial * ppm,
                    struct spectra * psp,
                    double R,
                    double z,
                    double *sigma_cb
                    );
  int spectra_output_tk_titles(struct background *pba,
                               struct perturbs *ppt,
                               enum file_format output_format,
                               char titles[_MAXTITLESTRINGLENGTH_]
                               );
  int spectra_output_tk_data(
                             struct background * pba,
                             struct perturbs * ppt,
                             struct spectra * psp,
                             enum file_format output_format,
                             double z,
                             int number_of_titles,
                             double *data
                             );
  int spectra_firstline_and_ic_suffix(struct perturbs *ppt,
                                     int index_ic,
                                     char first_line[_LINE_LENGTH_MAX_],
                                     FileName ic_suffix);
  int spectra_fast_pk_at_kvec_and_zvec(
				       struct background * pba,
				       struct spectra * psp,
				       double * kvec,
				       int kvec_size,
				       double * zvec,
				       int zvec_size,
				       double * pk_tot_out, 
                       double * pk_cb_tot_out,
				       int nonlinear);