include/nonlinear.h

enum non_linear_method {nl_none,nl_halofit,nl_HMcode};
enum hmcode_baryonic_feedback_model {emu_dmonly, owls_dmonly, owls_ref, owls_agn, owls_dblim, user_defined};
struct nonlinear {
  enum non_linear_method method; 
	enum hmcode_baryonic_feedback_model feedback; 
  int k_size;      
  double * k;      
  int k_size_extra;
  double * k_extra;
  int tau_size;    
  double * tau;    
  double * nl_corr_density;   
  double * k_nl;  
  int index_tau_min_nl; 
  double * sigtab; 
  double * rtab; 
  double * stab; 
  double * ddstab; 
  double * growth_at_ztau;
  double * growtable;
  double * ztable;
  double * tautable;
  double c_min; 
  double eta_0; 
  short has_pk_eq;               
  int index_eq_w;                
  int index_eq_Omega_m;          
  int eq_size;                   
  int eq_tau_size;               
  double * eq_tau;               
  double * eq_w_and_Omega;       
  double * eq_ddw_and_ddOmega;   
  short nonlinear_verbose;  	
  ErrorMsg error_message; 	
};
  int nonlinear_k_nl_at_z(
                          struct background *pba,
                          struct nonlinear * pnl,
                          double z,
                          double * k_nl
                          );
  int nonlinear_init(
                     struct precision *ppr,
                     struct background *pba,
                     struct thermo *pth,
                     struct perturbs *ppt,
                     struct primordial *ppm,
                     struct nonlinear *pnl
                     );
  int nonlinear_free(
                     struct nonlinear *pnl
                     );